feat: Roles were implemented with the tokens